Fully implemented cleanToken function and tweaked some of its tests to better represent function behavior

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,10 @@
   "C_Cpp.default.compilerPath": "/usr/bin/clang++",
   "debug.onTaskErrors": "abort",
   "lldb.showDisassembly": "never",
+  "files.associations": {
+    "array": "cpp",
+    "any": "cpp",
+    "string_view": "cpp",
+    "regex": "cpp"
+  },
 }
