--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "string": "cpp",
     "unordered_map": "cpp",
     "vector": "cpp",
-    "initializer_list": "cpp"
+    "initializer_list": "cpp",
+    "iostream": "cpp"
   },
 }
